# the-algorithm-box

./: logo.blend
.github/ISSUE_TEMPLATE/: code-bug.md  improve-content.md  questions.md  website-bug.md
.github/workflows/: clone-from-gitlab.yml  deploy.yml  test-deploy.yml
tab/: .gitignore  CMakeLists.txt  library.h
tab/tab/: CMakeLists.txt
tab/tab/graphics/: CMakeLists.txt
tab/tab/graphics/math/: CMakeLists.txt  matrix2.ixx  vector.ixx  vector2.ixx  vector3.ixx  vector4.ixx
tab/tests/: CMakeLists.txt
tab/tests/graphics/: CMakeLists.txt
tab/tests/graphics/math/: CMakeLists.txt  matrix2_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_test.cpp
website/: astro.config.ts  docusaurus.config.ts  ec.config.ts  package-lock.json  package.json  tsconfig.json
website/.github/workflows/: deploy.yml
website/docs/: _category_.json  index.md  index.mdx  intro.mdx
website/docs/computer-graphics/: _category_.json
website/docs/computer-graphics/math/: _category_.json  vectors.mdx
website/docs/containers/: _category_.json
website/src/components/: SectionMenu.astro  code-snippet.tsx  code.tsx  theme.tsx
website/src/components/overrides/: CardGrid.astro  Hero.astro  LinkCard.astro
website/src/config/: github-data.ts
website/src/content/docs/: __index.mdx  about.mdx  author.mdx  changelog.mdx  index.tsx
website/src/content/docs/code/: index.mdx
website/src/content/docs/code/computer-graphics/: _meta.yml  a.mdx  index.mdx
website/src/content/docs/code/computer-graphics/math/: _meta.yml  a.mdx  index.mdx  matrices_1.mdx  vectors.mdx  vectors_1.mdx  vectors_2.mdx
website/src/css/: custom.css
website/src/pages/: about.md  index.astro  index.tsx  whoami.md
website/src/styles/: custom.css  custom.scss  prism-one-light.css  tomorrow.css
website/src/theme/: Root.tsx
website/src/theme/ColorModeToggle/: index.tsx
website/src/theme/DocCard/: index.tsx
website/src/theme/DocCardList/: index.tsx
